@@ -1,27 +1,36 @@
-// Copyright 2000-2017 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
+// Copyright 2000-2019 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
 package org.jetbrains.plugins.gradle.service.execution;
 
 import com.intellij.execution.configurations.GeneralCommandLine;
 import com.intellij.openapi.application.Application;
 import com.intellij.openapi.application.ApplicationManager;
 import com.intellij.openapi.application.PathManager;
+import com.intellij.openapi.application.ex.ApplicationInfoEx;
+import com.intellij.openapi.application.impl.ApplicationInfoImpl;
 import com.intellij.openapi.diagnostic.Logger;
 import com.intellij.openapi.externalSystem.model.ExternalSystemException;
 import com.intellij.openapi.externalSystem.model.task.ExternalSystemTaskId;
 import com.intellij.openapi.externalSystem.model.task.ExternalSystemTaskNotificationListener;
 import com.intellij.openapi.externalSystem.service.execution.ExternalSystemRunConfiguration;
+import com.intellij.openapi.externalSystem.util.OutputWrapper;
+import com.intellij.openapi.util.Couple;
 import com.intellij.openapi.util.io.FileUtil;
 import com.intellij.openapi.util.io.StreamUtil;
 import com.intellij.openapi.util.text.StringUtil;
 import com.intellij.util.*;
 import com.intellij.util.containers.ContainerUtil;
+import com.intellij.util.containers.MultiMap;
 import org.gradle.initialization.BuildLayoutParameters;
 import org.gradle.internal.nativeintegration.services.NativeServices;
 import org.gradle.process.internal.JvmOptions;
 import org.gradle.tooling.*;
+import org.gradle.tooling.events.OperationType;
 import org.gradle.tooling.internal.consumer.DefaultGradleConnector;
+import org.gradle.tooling.model.BuildIdentifier;
+import org.gradle.tooling.model.UnsupportedMethodException;
 import org.gradle.tooling.model.build.BuildEnvironment;
 import org.gradle.util.GradleVersion;
+import org.jetbrains.annotations.ApiStatus;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 import org.jetbrains.plugins.gradle.service.project.DistributionFactoryExt;
@@ -37,6 +46,7 @@ import java.io.File;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.OutputStream;
+import java.nio.charset.StandardCharsets;
 import java.util.*;
 import java.util.concurrent.TimeUnit;
 import java.util.regex.Matcher;
@@ -44,7 +54,6 @@ import java.util.regex.Pattern;
 
 /**
  * @author Denis Zhdanov
- * @since 3/14/13 5:11 PM
  */
 public class GradleExecutionHelper {
 
@@ -98,8 +107,8 @@ public class GradleExecutionHelper {
                              @NotNull ProjectConnection connection,
                              @NotNull final OutputStream standardOutput,
                              @NotNull final OutputStream standardError) {
-    Set<String> jvmArgs = settings.getVmOptions();
-    BuildEnvironment buildEnvironment = getBuildEnvironment(connection, id, listener);
+    List<String> jvmArgs = settings.getJvmArguments();
+    BuildEnvironment buildEnvironment = getBuildEnvironment(connection, id, listener, null);
 
     String gradleVersion = buildEnvironment != null ? buildEnvironment.getGradle().getGradleVersion() : null;
     if (!jvmArgs.isEmpty()) {
@@ -108,7 +117,8 @@ public class GradleExecutionHelper {
       if (buildEnvironment != null) {
         // the BuildEnvironment jvm arguments of the main build should be used for the 'buildSrc' import
         // to avoid spawning of the second gradle daemon
-        List<String> buildJvmArguments = "buildSrc".equals(buildEnvironment.getBuildIdentifier().getRootDir().getName())
+        BuildIdentifier buildIdentifier = getBuildIdentifier(buildEnvironment);
+        List<String> buildJvmArguments = buildIdentifier == null || "buildSrc".equals(buildIdentifier.getRootDir().getName())
                                          ? ContainerUtil.emptyList()
                                          : buildEnvironment.getJava().getJvmArguments();
         merged = mergeJvmArgs(settings.getServiceDirectory(), buildJvmArguments, jvmArgs);
@@ -129,23 +139,36 @@ public class GradleExecutionHelper {
 
     final Application application = ApplicationManager.getApplication();
     if (application != null && application.isUnitTestMode()) {
-      if (!settings.getArguments().contains("--quiet") && !settings.getArguments().contains("--debug")) {
-        settings.withArgument("--info");
+      if (!settings.getArguments().contains("--quiet")) {
+        if (!settings.getArguments().contains("--debug")){
+          settings.withArgument("--info");
+        }
+        settings.withArgument("--stacktrace");
       }
-      settings.withArgument("--recompile-scripts");
     }
 
+    List<String> filteredArgs = new ArrayList<>();
     if (!settings.getArguments().isEmpty()) {
       String loggableArgs = StringUtil.join(obfuscatePasswordParameters(settings.getArguments()), " ");
       LOG.info("Passing command-line args to Gradle Tooling API: " + loggableArgs);
 
-      // filter nulls and empty strings
-      List<String> filteredArgs = ContainerUtil.mapNotNull(settings.getArguments(), s -> StringUtil.isEmpty(s) ? null : s);
-
+      // filter nulls, empty strings and '--args' arguments
+      for (Iterator<String> iterator = settings.getArguments().iterator(); iterator.hasNext(); ) {
+        String arg = iterator.next();
+        if(StringUtil.isEmpty(arg)) continue;
+        if("--args".equals(arg) && iterator.hasNext()) {
+          iterator.next();
+        } else {
+          filteredArgs.add(arg);
+        }
+      }
       // TODO remove this replacement when --tests option will become available for tooling API
       replaceTestCommandOptionWithInitScript(filteredArgs);
-      operation.withArguments(ArrayUtil.toStringArray(filteredArgs));
     }
+    filteredArgs.add("-Didea.active=true");
+    filteredArgs.add("-Didea.version=" + getIdeaVersion());
+    operation.withArguments(ArrayUtil.toStringArray(filteredArgs));
+
     setupEnvironment(operation, settings, gradleVersion, id, listener);
 
     final String javaHome = settings.getJavaHome();
@@ -153,16 +176,37 @@ public class GradleExecutionHelper {
       operation.setJavaHome(new File(javaHome));
     }
 
-    String buildRootDir = buildEnvironment == null ? null : buildEnvironment.getBuildIdentifier().getRootDir().getPath();
+    String buildRootDir;
+    if (buildEnvironment == null) {
+      buildRootDir = null;
+    }
+    else {
+      BuildIdentifier buildIdentifier = getBuildIdentifier(buildEnvironment);
+      buildRootDir = buildIdentifier == null ? null : buildIdentifier.getRootDir().getPath();
+    }
     GradleProgressListener gradleProgressListener = new GradleProgressListener(listener, id, buildRootDir);
     operation.addProgressListener((ProgressListener)gradleProgressListener);
-    operation.addProgressListener((org.gradle.tooling.events.ProgressListener)gradleProgressListener);
+    operation.addProgressListener(gradleProgressListener,
+                                  OperationType.GENERIC,
+                                  OperationType.PROJECT_CONFIGURATION,
+                                  OperationType.TASK,
+                                  OperationType.TEST);
     operation.setStandardOutput(standardOutput);
     operation.setStandardError(standardError);
     InputStream inputStream = settings.getUserData(ExternalSystemRunConfiguration.RUN_INPUT_KEY);
     if (inputStream != null) {
       operation.setStandardInput(inputStream);
     }
+  }
+
+  @Nullable
+  private static BuildIdentifier getBuildIdentifier(@NotNull BuildEnvironment buildEnvironment) {
+    try {
+      return buildEnvironment.getBuildIdentifier();
+    }
+    catch (UnsupportedMethodException ignore) {
+    }
+    return null;
   }
 
   private static void setupEnvironment(@NotNull LongRunningOperation operation,
@@ -189,7 +233,7 @@ public class GradleExecutionHelper {
     operation.setEnvironmentVariables(effectiveEnvironment);
   }
 
-  public <T> T execute(@NotNull String projectPath, @Nullable GradleExecutionSettings settings, @NotNull Function<ProjectConnection, T> f) {
+  public <T> T execute(@NotNull String projectPath, @Nullable GradleExecutionSettings settings, @NotNull Function<? super ProjectConnection, ? extends T> f) {
 
     final String projectDir;
     final File projectPathFile = new File(projectPath);
@@ -220,7 +264,9 @@ public class GradleExecutionHelper {
     catch (Throwable e) {
       LOG.debug("Gradle execution error", e);
       Throwable rootCause = ExceptionUtil.getRootCause(e);
-      throw new ExternalSystemException(ExceptionUtil.getMessage(rootCause), e);
+      ExternalSystemException externalSystemException = new ExternalSystemException(ExceptionUtil.getMessage(rootCause), e);
+      externalSystemException.initCause(e);
+      throw externalSystemException;
     }
     finally {
       try {
@@ -260,7 +306,7 @@ public class GradleExecutionHelper {
         final File scriptFile = new File(wrapperFilesLocation, "gradlew");
         final File pathToProperties = new File(wrapperFilesLocation, "path.tmp");
 
-        Runtime.getRuntime().addShutdownHook(new Thread(() -> FileUtil.delete(wrapperFilesLocation)));
+        Runtime.getRuntime().addShutdownHook(new Thread(() -> FileUtil.delete(wrapperFilesLocation), "GradleExecutionHelper cleanup"));
         final String[] lines = {
           "",
           "gradle.projectsEvaluated { gr ->",
@@ -277,7 +323,7 @@ public class GradleExecutionHelper {
           "}",
           "",
         };
-        final File tempFile = writeToFileGradleInitScript(StringUtil.join(lines, SystemProperties.getLineSeparator()));
+        final File tempFile = writeToFileGradleInitScript(StringUtil.join(lines, SystemProperties.getLineSeparator()), "wrapper_init");
         settings.withArguments(GradleConstants.INIT_SCRIPT_CMD_OPTION, tempFile.getAbsolutePath());
         BuildLauncher launcher = getBuildLauncher(id, connection, settings, listener);
         launcher.withCancellationToken(cancellationToken);
@@ -292,7 +338,9 @@ public class GradleExecutionHelper {
     catch (Throwable e) {
       LOG.warn("Can't update wrapper", e);
       Throwable rootCause = ExceptionUtil.getRootCause(e);
-      throw new ExternalSystemException(ExceptionUtil.getMessage(rootCause));
+      ExternalSystemException externalSystemException = new ExternalSystemException(ExceptionUtil.getMessage(rootCause));
+      externalSystemException.initCause(e);
+      throw externalSystemException;
     }
     finally {
       settings.setRemoteProcessIdleTtlInMs(ttlInMs);
@@ -305,28 +353,80 @@ public class GradleExecutionHelper {
     }
   }
 
-  private static List<String> mergeJvmArgs(String serviceDirectory, List<String> jvmArgs, Set<String> jvmArgsFromIdeSettings) {
+  @ApiStatus.Experimental
+  static List<String> mergeJvmArgs(String serviceDirectory, List<String> jvmArgs, List<String> jvmArgsFromIdeSettings) {
     File gradleUserHomeDir = serviceDirectory != null ? new File(serviceDirectory) : new BuildLayoutParameters().getGradleUserHomeDir();
     LOG.debug("Gradle home: " + gradleUserHomeDir);
     NativeServices.initialize(gradleUserHomeDir);
-    Map<String, String> mergedArgs = new LinkedHashMap<>();
+    JvmOptions jvmOptions = new JvmOptions(null);
+    List<String> mergedJvmArgs = mergeJvmArgs(jvmArgs, jvmArgsFromIdeSettings);
+    jvmOptions.setAllJvmArgs(mergedJvmArgs);
+    return jvmOptions.getAllJvmArgs();
+  }
+
+  @ApiStatus.Experimental
+  static List<String> mergeJvmArgs(List<String> jvmArgs, List<String> jvmArgsFromIdeSettings) {
+    MultiMap<String, String> argumentsMap = MultiMap.createLinkedSet();
+    String lastKey = null;
     for (String jvmArg : ContainerUtil.concat(jvmArgs, jvmArgsFromIdeSettings)) {
-      int i = jvmArg.indexOf('=');
-      if (i <= 0) {
-        mergedArgs.put(jvmArg, "");
+      if (jvmArg.startsWith("-")) {
+        argumentsMap.putValue(jvmArg, "");
+        lastKey = jvmArg;
       }
       else {
-        mergedArgs.put(jvmArg.substring(0, i), jvmArg.substring(i));
+        if (lastKey != null) {
+          argumentsMap.putValue(lastKey, jvmArg);
+          lastKey = null;
+        }
+        else {
+          argumentsMap.putValue(jvmArg, "");
+        }
       }
     }
 
-    List<String> mergedList = new ArrayList<>();
-    for (Map.Entry<String, String> entry : mergedArgs.entrySet()) {
-      mergedList.add(entry.getKey() + entry.getValue());
+    Map<String, String> mergedKeys = new LinkedHashMap<>();
+    Set<String> argKeySet = new LinkedHashSet<>(argumentsMap.keySet());
+    for (String argKey : argKeySet) {
+      Collection<String> values = argumentsMap.getModifiable(argKey);
+      if (values.size() == 1 && values.iterator().next().isEmpty()) {
+        Couple<String> couple = splitArg(argKey);
+        mergedKeys.put(couple.first, couple.second);
+      }
+      else {
+        mergedKeys.put(argKey, "");
+        Map<String, String> mergedArgs = new LinkedHashMap<>();
+        for (String jvmArg : values) {
+          if (jvmArg.isEmpty()) continue;
+          Couple<String> couple = splitArg(jvmArg);
+          mergedArgs.put(couple.first, couple.second);
+        }
+        values.clear();
+        mergedArgs.forEach((key, value) -> values.add(key + value));
+      }
     }
-    JvmOptions jvmOptions = new JvmOptions(null);
-    jvmOptions.setAllJvmArgs(mergedList);
-    return jvmOptions.getAllJvmArgs();
+
+    List<String> mergedArgs = new SmartList<>();
+    mergedKeys.forEach((s1, s2) -> mergedArgs.add(s1 + s2));
+    argKeySet.stream().filter(argKey -> !mergedArgs.contains(argKey)).forEach(argumentsMap::remove);
+
+    // remove `--add-opens` options, because same options will be added by gradle producing the option duplicates.
+    // And the daemon will become uncompilable with the CLI invocations.
+    // see https://github.com/gradle/gradle/blob/v5.1.1/subprojects/launcher/src/main/java/org/gradle/launcher/daemon/configuration/DaemonParameters.java#L125
+    argumentsMap.remove("--add-opens");
+
+    List<String> result = new SmartList<>();
+    argumentsMap.keySet().forEach(key -> argumentsMap.get(key).forEach(val -> {
+      result.add(key);
+      if (StringUtil.isNotEmpty(val)) {
+        result.add(val);
+      }
+    }));
+    return result;
+  }
+
+  private static Couple<String> splitArg(String arg) {
+    int i = arg.indexOf('=');
+    return i <= 0 ? Couple.of(arg, "") : Couple.of(arg.substring(0, i), arg.substring(i));
   }
 
   /**
@@ -357,7 +457,7 @@ public class GradleExecutionHelper {
           break;
         case WRAPPED:
           if (settings.getWrapperPropertyFile() != null) {
-            DistributionFactoryExt.setWrappedDistribution(connector, settings.getWrapperPropertyFile(), serviceDirectory);
+            DistributionFactoryExt.setWrappedDistribution(connector, settings.getWrapperPropertyFile(), serviceDirectory, projectDir);
           }
           break;
       }
@@ -407,7 +507,7 @@ public class GradleExecutionHelper {
         script += buildSrcDefaultInitScript;
       }
 
-      return writeToFileGradleInitScript(script);
+      return writeToFileGradleInitScript(script, "ijinit");
     }
     catch (Exception e) {
       LOG.warn("Can't generate IJ gradle init script", e);
@@ -418,19 +518,33 @@ public class GradleExecutionHelper {
     }
   }
 
+  /**
+   * @deprecated use {@link GradleExecutionHelper#writeToFileGradleInitScript(String, String)} instead
+   */
+  @Deprecated
+  @ApiStatus.ScheduledForRemoval(inVersion = "2019.1")
   public static File writeToFileGradleInitScript(@NotNull String content) throws IOException {
     return writeToFileGradleInitScript(content, "ijinit");
   }
 
   public static File writeToFileGradleInitScript(@NotNull String content, @NotNull String filePrefix) throws IOException {
-    File tempFile = new File(FileUtil.getTempDirectory(), filePrefix + '.' + GradleConstants.EXTENSION);
-    if (tempFile.exists() && StringUtil.equals(content, FileUtil.loadFile(tempFile))) {
-      return tempFile;
-    }
-    tempFile = FileUtil.findSequentNonexistentFile(tempFile.getParentFile(), filePrefix, GradleConstants.EXTENSION);
-    FileUtil.writeToFile(tempFile, content);
-    tempFile.deleteOnExit();
-    return tempFile;
+    byte[] contentBytes = content.getBytes(StandardCharsets.UTF_8);
+    int contentLength = contentBytes.length;
+    return FileUtil.findSequentFile(new File(FileUtil.getTempDirectory()), filePrefix, GradleConstants.EXTENSION, file -> {
+      try {
+        if (!file.exists()) {
+          FileUtil.writeToFile(file, contentBytes, false);
+          file.deleteOnExit();
+          return true;
+        }
+        if (contentLength != file.length()) return false;
+        return content.equals(FileUtil.loadFile(file, StandardCharsets.UTF_8));
+      }
+      catch (IOException ignore) {
+        // Skip file with access issues. Will attempt to check the next file
+      }
+      return false;
+    });
   }
 
   @Nullable
@@ -484,34 +598,40 @@ public class GradleExecutionHelper {
                                                      @NotNull ExternalSystemTaskId taskId,
                                                      @NotNull ExternalSystemTaskNotificationListener listener,
                                                      @Nullable CancellationTokenSource cancellationTokenSource) {
-    ModelBuilder<BuildEnvironment> modelBuilder = connection.model(BuildEnvironment.class);
-    if (cancellationTokenSource != null) {
-      modelBuilder.withCancellationToken(cancellationTokenSource.token());
-    }
-    // do not use connection.getModel methods since it doesn't allow to handle progress events
-    // and we can miss gradle tooling client side events like distribution download.
-    GradleProgressListener gradleProgressListener = new GradleProgressListener(listener, taskId);
-    modelBuilder.addProgressListener((ProgressListener)gradleProgressListener);
-    modelBuilder.addProgressListener((org.gradle.tooling.events.ProgressListener)gradleProgressListener);
-    modelBuilder.setStandardOutput(new OutputWrapper(listener, taskId, true));
-    modelBuilder.setStandardError(new OutputWrapper(listener, taskId, false));
+    BuildEnvironment buildEnvironment = null;
+    try {
+      ModelBuilder<BuildEnvironment> modelBuilder = connection.model(BuildEnvironment.class);
+      if (cancellationTokenSource != null) {
+        modelBuilder.withCancellationToken(cancellationTokenSource.token());
+      }
+      // do not use connection.getModel methods since it doesn't allow to handle progress events
+      // and we can miss gradle tooling client side events like distribution download.
+      GradleProgressListener gradleProgressListener = new GradleProgressListener(listener, taskId);
+      modelBuilder.addProgressListener((ProgressListener)gradleProgressListener);
+      modelBuilder.addProgressListener((org.gradle.tooling.events.ProgressListener)gradleProgressListener);
+      modelBuilder.setStandardOutput(new OutputWrapper(listener, taskId, true));
+      modelBuilder.setStandardError(new OutputWrapper(listener, taskId, false));
 
-    final BuildEnvironment buildEnvironment = modelBuilder.get();
-    if (LOG.isDebugEnabled()) {
-      try {
-        LOG.debug("Gradle version: " + buildEnvironment.getGradle().getGradleVersion());
-        LOG.debug("Gradle java home: " + buildEnvironment.getJava().getJavaHome());
-        LOG.debug("Gradle jvm arguments: " + buildEnvironment.getJava().getJvmArguments());
+      buildEnvironment = modelBuilder.get();
+      if (LOG.isDebugEnabled()) {
+        try {
+          LOG.debug("Gradle version: " + buildEnvironment.getGradle().getGradleVersion());
+          LOG.debug("Gradle java home: " + buildEnvironment.getJava().getJavaHome());
+          LOG.debug("Gradle jvm arguments: " + buildEnvironment.getJava().getJvmArguments());
+        }
+        catch (Throwable t) {
+          LOG.debug(t);
+        }
       }
-      catch (Throwable t) {
-        LOG.debug(t);
-      }
+    }
+    catch (Throwable t) {
+      LOG.debug(t);
     }
     return buildEnvironment;
   }
 
   private static void replaceTestCommandOptionWithInitScript(@NotNull List<String> args) {
-    Set<String> testIncludePatterns = ContainerUtil.newLinkedHashSet();
+    Set<String> testIncludePatterns = new LinkedHashSet<>();
     Iterator<String> it = args.iterator();
     while (it.hasNext()) {
       final String next = it.next();
@@ -528,7 +648,8 @@ public class GradleExecutionHelper {
       buf.append('[');
       for (Iterator<String> iterator = testIncludePatterns.iterator(); iterator.hasNext(); ) {
         String pattern = iterator.next();
-        buf.append('\'').append(pattern).append('\'');
+        String groovyPattern = toGroovyString(pattern);
+        buf.append('\'').append(groovyPattern).append('\'');
         if (iterator.hasNext()) {
           buf.append(',');
         }
@@ -540,6 +661,26 @@ public class GradleExecutionHelper {
         ContainerUtil.addAll(args, GradleConstants.INIT_SCRIPT_CMD_OPTION, path);
       }
     }
+  }
+
+  @NotNull
+  public static String toGroovyString(@NotNull String string) {
+    StringBuilder stringBuilder = new StringBuilder();
+    for (char ch : string.toCharArray()) {
+      if (ch == '\\') {
+        stringBuilder.append("\\\\");
+      }
+      else if (ch == '\'') {
+        stringBuilder.append("\\'");
+      }
+      else if (ch == '"') {
+        stringBuilder.append("\\\"");
+      }
+      else {
+        stringBuilder.append(ch);
+      }
+    }
+    return stringBuilder.toString();
   }
 
   @Nullable
@@ -603,7 +744,7 @@ public class GradleExecutionHelper {
                                              @NotNull ExternalSystemTaskNotificationListener listener,
                                              @NotNull List<String> extraJvmArgs) {
     ModelBuilder<T> result = connection.model(modelType);
-    prepare(result, id, settings, listener, extraJvmArgs, ContainerUtil.newArrayList(), connection);
+    prepare(result, id, settings, listener, extraJvmArgs, new ArrayList<>(), connection);
     return result;
   }
 
@@ -689,5 +830,10 @@ public class GradleExecutionHelper {
                              @NotNull final OutputStream standardError) {
     settings.withArguments(commandLineArgs).withVmOptions(extraJvmArgs);
     prepare(operation, id, settings, listener, connection, standardOutput, standardError);
+  }
+
+  private static String getIdeaVersion() {
+    ApplicationInfoEx appInfo = ApplicationInfoImpl.getShadowInstance();
+    return appInfo.getMajorVersion() + "." + appInfo.getMinorVersion();
   }
 }
