@@ -114,7 +114,7 @@ public class PyCallExpressionHelper {
     final List<PyCallExpression.PyMarkedCallee> ratedMarkedCallees = new ArrayList<>();
 
     for (QualifiedRatedResolveResult resolveResult : multiResolveCallee(call.getCallee(), resolveContext)) {
-      for (ClarifiedResolveResult clarifiedResolveResult : clarifyResolveResult(resolveResult, resolveContext)) {
+      for (ClarifiedResolveResult clarifiedResolveResult : clarifyResolveResult(call, resolveResult, resolveContext)) {
         final PyCallExpression.PyMarkedCallee markedCallee = markResolveResult(clarifiedResolveResult, context, implicitOffset);
         if (markedCallee == null) continue;
 
@@ -127,9 +127,9 @@ public class PyCallExpressionHelper {
       .collect(
         Collectors.groupingBy(markedCallee -> markedCallee.getCallableType(), LinkedHashMap::new, Collectors.toList())
       )
-      .entrySet()
+      .values()
       .stream()
-      .map(entry -> entry.getValue().stream().max(Comparator.comparingInt(PyCallExpression.PyMarkedCallee::getRate)).orElse(null))
+      .map(callees -> callees.stream().max(Comparator.comparingInt(PyCallExpression.PyMarkedCallee::getRate)).orElse(null))
       .filter(Objects::nonNull)
       .collect(Collectors.toList());
   }
@@ -171,7 +171,8 @@ public class PyCallExpressionHelper {
   }
 
   @NotNull
-  private static List<ClarifiedResolveResult> clarifyResolveResult(@NotNull QualifiedRatedResolveResult resolveResult,
+  private static List<ClarifiedResolveResult> clarifyResolveResult(@NotNull PyCallExpression call,
+                                                                   @NotNull QualifiedRatedResolveResult resolveResult,
                                                                    @NotNull PyResolveContext resolveContext) {
     final PsiElement resolved = resolveResult.getElement();
 
@@ -224,8 +225,11 @@ public class PyCallExpressionHelper {
       }
     }
 
+    final boolean isConstructor = resolved instanceof PyFunction &&
+                                  isConstructorName(((PyFunction)resolved).getName()) &&
+                                  call.getReceiver((PyCallable)resolved) == null;
     return resolved != null
-           ? Collections.singletonList(new ClarifiedResolveResult(resolveResult, resolved, null, false))
+           ? Collections.singletonList(new ClarifiedResolveResult(resolveResult, resolved, null, isConstructor))
            : Collections.emptyList();
   }
 
@@ -527,7 +531,7 @@ public class PyCallExpressionHelper {
     }
     else if (target instanceof PyFunction) {
       final PyFunction f = (PyFunction)target;
-      if (PyNames.INIT.equals(f.getName())) {
+      if (isConstructorName(f.getName())) {
         init = f;
         cls = f.getContainingClass();
       }
@@ -553,7 +557,7 @@ public class PyCallExpressionHelper {
         return Ref.create(t);
       }
       if (cls != null) {
-        final PyFunction newMethod = cls.findMethodByName(PyNames.NEW, true, null);
+        final PyFunction newMethod = cls.findMethodByName(PyNames.NEW, true, context);
         if (newMethod != null && !PyBuiltinCache.getInstance(call).isBuiltin(newMethod)) {
           return Ref.create(PyUnionType.createWeakType(new PyClassTypeImpl(cls, false)));
         }
@@ -598,7 +602,7 @@ public class PyCallExpressionHelper {
   }
 
   @NotNull
-  private static Maybe<PyType> getSuperCallType(@NotNull PyCallExpression call, TypeEvalContext context) {
+  private static Maybe<PyType> getSuperCallType(@NotNull PyCallExpression call, @NotNull TypeEvalContext context) {
     final PyExpression callee = call.getCallee();
     if (callee instanceof PyReferenceExpression) {
       PsiElement must_be_super_init = ((PyReferenceExpression)callee).getReference().resolve();
@@ -609,7 +613,7 @@ public class PyCallExpressionHelper {
           if (argumentList != null) {
             final PyClass containingClass = PsiTreeUtil.getParentOfType(call, PyClass.class);
             PyExpression[] args = argumentList.getArguments();
-            if (args.length > 1) {
+            if (containingClass != null && args.length > 1) {
               PyExpression first_arg = args[0];
               if (first_arg instanceof PyReferenceExpression) {
                 final PyReferenceExpression firstArgRef = (PyReferenceExpression)first_arg;
@@ -644,7 +648,9 @@ public class PyCallExpressionHelper {
   }
 
   @Nullable
-  private static PyType getSuperCallTypeForArguments(TypeEvalContext context, PyClass firstClass, PyExpression second_arg) {
+  private static PyType getSuperCallTypeForArguments(@NotNull TypeEvalContext context,
+                                                     @NotNull PyClass firstClass,
+                                                     @Nullable PyExpression second_arg) {
     // check 2nd argument, too; it should be an instance
     if (second_arg != null) {
       PyType second_type = context.getType(second_arg);
@@ -655,9 +661,15 @@ public class PyCallExpressionHelper {
           return getSuperClassUnionType(firstClass, context);
         }
         if (secondClass.isSubclass(firstClass, context)) {
-          final Iterator<PyClass> iterator = firstClass.getAncestorClasses(context).iterator();
-          if (iterator.hasNext()) {
-            return new PyClassTypeImpl(iterator.next(), false); // super(Foo, self) has type of Foo, modulo __get__()
+          final PyClass nextAfterFirstInMro = StreamEx
+            .of(secondClass.getAncestorClasses(context))
+            .dropWhile(it -> it != firstClass)
+            .skip(1)
+            .findFirst()
+            .orElse(null);
+
+          if (nextAfterFirstInMro != null) {
+            return new PyClassTypeImpl(nextAfterFirstInMro, false);
           }
         }
       }
@@ -754,7 +766,7 @@ public class PyCallExpressionHelper {
       return ContainerUtil.map(PyUtil.filterTopPriorityResults(callees),
                                callee -> Pair.create(callee.getElement(), callee.getCallableType()));
     }
-    else if (callSite instanceof PySubscriptionExpression || callSite instanceof PyBinaryExpression) {
+    else {
       final List<Pair<PyCallable, PyCallableType>> results = new ArrayList<>();
 
       for (PsiElement result : PyUtil.multiResolveTopPriority(callSite, resolveContext)) {
@@ -770,9 +782,6 @@ public class PyCallExpressionHelper {
       }
 
       return results;
-    }
-    else {
-      return Collections.emptyList();
     }
   }
 
@@ -816,16 +825,12 @@ public class PyCallExpressionHelper {
 
   @NotNull
   public static List<PyExpression> getArgumentsMappedToPositionalContainer(@NotNull Map<PyExpression, PyCallableParameter> mapping) {
-    return mapping.entrySet().stream()
-      .filter(e -> e.getValue().isPositionalContainer())
-      .map(e -> e.getKey()).collect(Collectors.toList());
+    return StreamEx.ofKeys(mapping, PyCallableParameter::isPositionalContainer).toList();
   }
 
   @NotNull
   public static List<PyExpression> getArgumentsMappedToKeywordContainer(@NotNull Map<PyExpression, PyCallableParameter> mapping) {
-    return mapping.entrySet().stream()
-      .filter(e -> e.getValue().isKeywordContainer())
-      .map(e -> e.getKey()).collect(Collectors.toList());
+    return StreamEx.ofKeys(mapping, PyCallableParameter::isKeywordContainer).toList();
   }
 
   @NotNull
@@ -1306,11 +1311,8 @@ public class PyCallExpressionHelper {
         implicitOffset = 0;
       }
     }
-    else if (callSite instanceof PySubscriptionExpression || callSite instanceof PyBinaryExpression) {
-      implicitOffset = 1;
-    }
     else {
-      implicitOffset = 0;
+      implicitOffset = 1;
     }
     return parameters.subList(Math.min(implicitOffset, parameters.size()), parameters.size());
   }
